до createNewRulesMentalID - опечатки

--- a/beast_scheme/funcs/ActiveFromPhrase.htm
+++ b/beast_scheme/funcs/ActiveFromPhrase.htm
@@ -12,12 +12,11 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция ActiveFromPhrase</h1>
 </div>
 
-<b>Запрос с Пульта: Активировать дерево рефлексов фразойтолько для условных рефлексов</b><br>
+<b>Запрос с Пульта: Активировать дерево рефлексов фразой только для условных рефлексов</b><br>
 <br>
-Была отправлана фраза с Пульта.<br>
+Была отправлена фраза с Пульта.<br>
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="main.htm">main</a></li>
-
