--- a/beast_scheme/funcs/CreateNewlastMentalActionsImagesID.htm
+++ b/beast_scheme/funcs/CreateNewlastMentalActionsImagesID.htm
@@ -18,10 +18,8 @@
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="loadMentalActionsImagesArr.htm">loadMentalActionsImagesArr</a> - загрузить образы сочетаний ментальных действий</li>
-<li><a href="infoFunc1.htm">infoFunc1</a> - одобрать MentalActionsImages для продолжения цикла осмысления</li>
+<li><a href="infoFunc1.htm">infoFunc1</a> - подобрать MentalActionsImages для продолжения цикла осмысления</li>
 <li><a href="infoFunc2.htm">infoFunc2</a> - выбор того или иного решения делается в контексте имеющейся инфо-среды</li>
 <li><a href="infoFunc7.htm">infoFunc7</a> - создать и запустить ментальный автоматизм запуска моторного автоматизма по действию ActionsImageID</li>
 <li>createAndRunPurposeAutomatizm</li>
 <li><a href="createNexusFromNextID.htm">createNexusFromNextID</a> - создание ментального автоматизма инфо-функции c ID= infoID</li>
-
-
