--- a/beast_scheme/funcs/addMewBaseLinksMemory.htm
+++ b/beast_scheme/funcs/addMewBaseLinksMemory.htm
@@ -12,7 +12,7 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция addMewBaseLinksMemory</h1>
 </div>
 
-<b>Добавить элементв стек для обобщений: 7 Базовых fromNextID</b><br>
+<b>Добавить элементов стек для обобщений: 7 Базовых fromNextID</b><br>
 <br>
 Сохраняет 7 Базовых fromNextID (звенья начала цепочки)<br>
 <br>
@@ -21,5 +21,3 @@
 <b>Функция вызывается из:</b>
 <li><a href="createBasicLink.htm">createBasicLink</a> - НАЙТИ или создать Базовое звено цепи fromNextID для данной активности деревьев
 и пройти цепочку до конца, чтобы продолжить цикл от него.</li>
-
-
