--- a/beast_scheme/funcs/afterTreeActivation.htm
+++ b/beast_scheme/funcs/afterTreeActivation.htm
@@ -14,7 +14,7 @@
 
 <b>Реакции после активации ветки дерева</b><br>
 <br>
-Если нет никаких действий, то возвращает false, инчае - true для блокировки более низкоуровневого действия.<br>
+Если нет никаких действий, то возвращает false, иначе - true для блокировки более низкоуровневого действия.<br>
 Здесь обрабатывается ПЕРИОД ОЖИДАНИЯ ОТВЕТА ОПЕРАТОРА, реагировать только на действия Оператора ActivationTypeSensor >1
 	после того, как был запущен моторный автоматизм (в том числе и ментальным автоматизмом).<br>
 Срабатывает при типе активации (ActivationTypeSensor>1) т.к. Правила записываются только
@@ -25,5 +25,3 @@
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="automatizmTreeActivation.htm">automatizmTreeActivation</a> - активация дерева автоматизмов</li>
-
-
