--- a/beast_scheme/funcs/afterWaitingPeriod.htm
+++ b/beast_scheme/funcs/afterWaitingPeriod.htm
@@ -12,14 +12,14 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция afterWaitingPeriod</h1>
 </div>
 
-<b>Учесть последствия ментального запуска мот.автоматизма</b><br>
+<b>Учесть последствия ментального запуска мот. автоматизма</b><br>
 <br>
-После периода ожидания, если мот.автоматизма был запущен ментально:<br>
+После периода ожидания, если мот. автоматизма был запущен ментально:<br>
 в конце saveFromNextIDAnswerCicle есть звено с таким запуском.<br>
 Учесть последствия ментального запуска мот.автоматизма,
-из saveFromNextIDAnswerCicle выявить Правила и записать в эпизод.пямять.<br>
+из saveFromNextIDAnswerCicle выявить Правила и записать в эпизод. пямять.<br>
 Если нужно - обдумать результат в новом ментальном consciousness(2,currrentFromNextID)
-Сразу после обработки периода ожидания запускается дерево понимания и объявный запуск consciousness(1,0) так что никаких действий совершать в afterWaitingPeriod() или в самой afterWaitingPeriod() не следует.<br>
+Сразу после обработки периода ожидания запускается дерево понимания и явный запуск consciousness(1,0) так что никаких действий совершать в afterWaitingPeriod() или в самой afterWaitingPeriod() не следует.<br>
 <br>
 
 <br>
