--- a/beast_scheme/funcs/automatizmTreeActivation.htm
+++ b/beast_scheme/funcs/automatizmTreeActivation.htm
@@ -30,11 +30,11 @@ var PsyVerbImg *Verbal // текущий образ фразы с Пульта V
 Так что к ветке может быть прикреплено множество неудачных и предположительных автоматизмов
 и только один удачный. Более удачный результат переводит ранее удачный автоматизм в предполагаемые.<br>
 2. При произвольной активации отдельных условий.<br>
-Отсуствие подходящей для данных условий ветки дерева вызывает
+Отсутствие подходящей для данных условий ветки дерева вызывает
 Ориентировочный рефлекс привлечения внимания к активной ветке с осмыслением ситуации
 и рассмотрением альтернатив действиям (4 уровня глубины рассмотрения).<br>
 При формировании нового предположительного действия создается новая ветка дерева и к ней прикрепляется автоматизм.<br>
-Т.е. новые условия не создают новой ветки, а тольно - новый автоматизм,
+Т.е. новые условия не создают новой ветки, а только - новый автоматизм,
 а пока нет автоматизма будет ориентировочный рефлекс.<br>
 <br>
 У дерева фиксированных 6 уровней:<br>
