--- a/beast_scheme/funcs/baseContextUpdate.htm
+++ b/beast_scheme/funcs/baseContextUpdate.htm
@@ -18,12 +18,10 @@
 1) от выхода из нормы жизненных параметров<br>
 2) от безусловно прошитых признаков восприятия<br>
 Антагонисты конкурируют между собой со своими весами значимости.<br>
-Ступор регулируется как отсуствие реакций в данном контексте при опасности.<br>
+Ступор регулируется как отсутствие реакций в данном контексте при опасности.<br>
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="SetCurGomeoParams.htm">SetCurGomeoParams</a> - установка параметров гомеостаза с Пульта</li>
 <li><a href="gomeostazUpdate.htm">gomeostazUpdate</a> - скорректировать текущее состояние гомеостаза</li>
-
-
