--- a/beast_scheme/funcs/cerebellumCoordination.htm
+++ b/beast_scheme/funcs/cerebellumCoordination.htm
@@ -15,8 +15,8 @@
 <b>Создать или дополнить автоматизм рефлексом мозжечка</b><br>
 <br>
 Создать или дополнить автоматизм рефлексом мозжечка cerebellumReflexFromID[LastAutomatizmWeiting.ID]
-другими корректирующими действиеями.<br>
-У автоматзма есть свой параметр Energy, но т.к. автоматизм может использоваться в разных случаях,
+другими корректирующими действиями.<br>
+У автоматизма есть свой параметр Energy, но т.к. автоматизм может использоваться в разных случаях,
    лучше для этих конкретных случаев использования уточнять энергичность
    с помощью мозжечковых рефлексов.<br>
 Возвращает true, если была оптимизация и нужно запустить такой автоматизм на новое исполнение для проверки.<br>
@@ -24,8 +24,6 @@
 
 <br>
 <b>Функция вызывается из:</b>
-<li>noAutovatizmResult - отреагировать на отсуствие реакции - повторить автоматизм с большей силой Energy</li>
+<li>noAutovatizmResult - отреагировать на отсутствие реакции - повторить автоматизм с большей силой Energy</li>
 <li><a href="infoFunc7.htm">infoFunc7</a> - создать и запустить ментальный автоматизм запуска моторного автоматизма по действию ActionsImageID</li>
 <li><a href="getPurposeGenetic2AndRunAutomatizm.htm">getPurposeGenetic2AndRunAutomatizm</a> - обработка автоматизма, рвущегося на выполнение, но в условиях может быть новизна</li>
-
-
