--- a/beast_scheme/funcs/conditionRexlexFound.htm
+++ b/beast_scheme/funcs/conditionRexlexFound.htm
@@ -16,19 +16,17 @@
 <br>
 Распознаватель условного рефлекса.<br>
 
-1. С помощью findConditionsReflesFromPrase( из всех у.рефлексов с данным ID образа пускового стимула (imgId3)
+1. С помощью findConditionsReflesFromPrase( из всех у. рефлексов с данным ID образа пускового стимула (imgId3)
 выбирается тот, что подходит к данным условиям 1 и 2 уровня.<br>
-2. Если на публьте была вбита фраза, для которой нет imgId3, то фраза очищается от неалфавитных символов
+2. Если на пульте была вбита фраза, для которой нет imgId3, то фраза очищается от неалфавитных символов
 и снова пробуется найти подходящий imgId3<br>
 3. Если все еще нет подходящего imgId3 то фраза комбинируется:
 перебираются все сочетания слов до максимального числа, без перемешивания, не менее чем по 2 слова<br>
 4. Если все еще нет подходящего imgId3 то пробуются все слова фразы, не менее 5 символов.<br>
-Это позволяет найти у.рефлекс среди длинной фразы, например,
+Это позволяет найти у. рефлекс среди длинной фразы, например,
 во фразе "я боюсь тебя" будет найден рефлекс на слово "боюсь".<br>
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="findReflexesNodes.htm">findReflexesNodes</a> - найти условный рефлекс в данных условиях.</li>
-
-
