--- a/beast_scheme/funcs/createAutomatizm.htm
+++ b/beast_scheme/funcs/createAutomatizm.htm
@@ -14,8 +14,8 @@
 
 <b>Сформировать пробный автоматизм моторного действия и сразу запустить его в действие</b><br>
 <br>
-Зафиксироваь время действия
-   25 пульсов следить за измнением жизненных параметров и ответными действиями - считать следствием действия
+Зафиксировать время действия
+   25 пульсов следить за изменением жизненных параметров и ответными действиями - считать следствием действия
    оценить результат и скорректировать силу мозжечком в записи автоматизма.<br>
 <br>
 
@@ -23,5 +23,3 @@
 <b>Функция вызывается из:</b>
 <li><a href="createAndRunAutomatizmFromPurpose.htm">createAndRunAutomatizmFromPurpose</a></li>
 <li><a href="getPurposeGeneticAndRunAutomatizm.htm">getPurposeGeneticAndRunAutomatizm</a> - выбирается действие пробного автоматизма из выполнившегося рефлекса actualRelextActon</li>
-
-
