--- a/beast_scheme/funcs/createNewCerebellumReflex.htm
+++ b/beast_scheme/funcs/createNewCerebellumReflex.htm
@@ -14,12 +14,10 @@
 
 <b>Создать новый автоматизм для мозжечкового рефлекса</b><br>
 <br>
-В случае отсуствия автоматизма создается ID такого отсутсвия, пример такой записи: 2|||0|0| - ID=2<br>
+В случае отсутствия автоматизма создается ID такого отсутствия, пример такой записи: 2|||0|0| - ID=2<br>
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="cerebellumCoordination.htm">cerebellumCoordination</a> - Создать или дополнить автоматизм рефлексом мозжечка</li>
 <li><a href="loadCerebellumReflex.htm">loadCerebellumReflex</a> - загрузить рефлексы мозжечка</li>
-
-
