--- a/beast_scheme/funcs/createNewNextFromUnderstandingNodeID.htm
+++ b/beast_scheme/funcs/createNewNextFromUnderstandingNodeID.htm
@@ -21,6 +21,4 @@
 <b>Функция вызывается из:</b>
 <li><a href="createBasicLink.htm">createBasicLink</a> - НАЙТИ или создать Базовое звено цепи fromNextID для данной активности деревьев
 и пройти цепочку до конца, чтобы продолжить цикл от него.</li>
-<li><a href="createNexusFromNextID.htm">createNexusFromNextID</a> - Создается мент.авт-м запуска infoFuncNNN() - infoID</li>
-
-
+<li><a href="createNexusFromNextID.htm">createNexusFromNextID</a> - Создается мент. автоматизмм запуска infoFuncNNN() - infoID</li>
