--- a/beast_scheme/funcs/createNewNodePhraseTree.htm
+++ b/beast_scheme/funcs/createNewNodePhraseTree.htm
@@ -18,8 +18,6 @@
 
 <br>
 <b>Функция вызывается из:</b>
-<li><a href="PhraseDetection.htm">PhraseDetection</a> - роход одной фразы - распознавание ID слов фразы</li>
+<li><a href="PhraseDetection.htm">PhraseDetection</a> - проход одной фразы - распознавание ID слов фразы</li>
 <li><a href="loadPhraseTree.htm">loadPhraseTree</a> - Загрузка дерева фраз</li>
 <li>createPhraseTreeNodes - создание ветки фраз, начиная с заданного узла</li>
-
-
