--- a/beast_scheme/funcs/createNewRules.htm
+++ b/beast_scheme/funcs/createNewRules.htm
@@ -18,10 +18,8 @@
 
 <br>
 <b>Функция вызывается из:</b>
-<li><a href="getLastRulesSequenceFromEpisodeMemory.htm">getLastRulesSequenceFromEpisodeMemory</a> - Вытащить из эпизод.памяти посленюю цепочку кадров</li>
+<li><a href="getLastRulesSequenceFromEpisodeMemory.htm">getLastRulesSequenceFromEpisodeMemory</a> - Вытащить из эпизод. памяти последнюю цепочку кадров</li>
 <li><a href="loadrulesArr.htm">loadrulesArr</a> - загрузить образы rules</li>
 <li><a href="GetRulesFromEpisodeMemory.htm">GetRulesFromEpisodeMemory</a> - Создать групповое правило (более одного в цепочке EpisodeMemory.TAid)</li>
 <li><a href="fixNewRules.htm">fixNewRules</a> - при каждом ответе на действия оператора - прописывать текущее ПРАВИЛО rules</li>
-<li><a href="fixNewTeachRules.htm">fixNewTeachRules</a> - Записать одиночное Правило как Оператор отвечает на действиЯ Beast</li>
-
-
+<li><a href="fixNewTeachRules.htm">fixNewTeachRules</a> - Записать одиночное Правило как Оператор отвечает на действия Beast</li>
