--- a/beast_scheme/funcs/createNewlastActivityID.htm
+++ b/beast_scheme/funcs/createNewlastActivityID.htm
@@ -14,15 +14,13 @@
 
 <b>Создать образ сочетаний пусковых стимулов, если такого еще нет</b><br>
 <br>
-В случае отсуствия пусковых стимулов создается ID такого отсутсвия, пример такой записи: 2|||0|0| - ID=2<br>
+В случае отсутствия пусковых стимулов создается ID такого отсутствия, пример такой записи: 2|||0|0| - ID=2<br>
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="automatizmTreeActivation.htm">automatizmTreeActivation</a> - активация дерева автоматизмов</li>
-<li>FindConditionsNode - поиск узла дерева автоматизмов по условиям у.рефлекса для automatizms_from_reflexes.go</li>
+<li>FindConditionsNode - поиск узла дерева автоматизмов по условиям у. рефлекса для automatizms_from_reflexes.go</li>
 <li>CreateNewActivityImage - создать новый образ сочетаний действий, если такого еще нет</li>
 <li><a href="loadActivityFromIdArr.htm">loadActivityFromIdArr</a> - загрузить образы сочетаний пусковых стимулов</li>
 <li><a href="GetCurrentInformationEnvironment.htm">GetCurrentInformationEnvironment</a> - получение текущего состояния информационной среды</li>
-
-
