--- a/beast_scheme/funcs/createNewlastImportanceID.htm
+++ b/beast_scheme/funcs/createNewlastImportanceID.htm
@@ -19,7 +19,5 @@
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="loadImportance.htm">loadImportance</a> - загрузить образы Importance</li>
-<li><a href="setImportance.htm">setImportance</a> - Фиксация значимости объекта ОБъективного восприятия всех декларированных видов в данных условиях</li>
-<li><a href="afterWaitingPeriod.htm">afterWaitingPeriod</a> - после периода ожидания, если мот.автоматизма был запущен ментально</li>
-
-
+<li><a href="setImportance.htm">setImportance</a> - Фиксация значимости объекта Объективного восприятия всех декларированных видов в данных условиях</li>
+<li><a href="afterWaitingPeriod.htm">afterWaitingPeriod</a> - после периода ожидания, если мот. автоматизма был запущен ментально</li>
