--- a/beast_scheme/funcs/createNewlastTriggerAndActionID.htm
+++ b/beast_scheme/funcs/createNewlastTriggerAndActionID.htm
@@ -18,7 +18,5 @@
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="fixNewRules.htm">fixNewRules</a> - при каждом ответе на действия оператора - прописывать текущее ПРАВИЛО rules</li>
-<li><a href="fixNewTeachRules.htm">fixNewTeachRules</a> - Записать одиночное Правило как Оператор отвечает на действиЯ Beast</li>
+<li><a href="fixNewTeachRules.htm">fixNewTeachRules</a> - Записать одиночное Правило как Оператор отвечает на действия Beast</li>
 <li><a href="loadTriggerAndActionArr.htm">loadTriggerAndActionArr</a> - загрузить образы правил</li>
-
-
