--- a/beast_scheme/funcs/createNewlastTriggerStimulsTempID.htm
+++ b/beast_scheme/funcs/createNewlastTriggerStimulsTempID.htm
@@ -14,11 +14,9 @@
 
 <b>Создать образ сочетаний пусковых стимулов</b><br>
 <br>
-В случае отсуствия пусковых стимулов создается ID такого отсутсвия, пример такой записи: 2|||0|0| - ID=2<br>
+В случае отсутствия пусковых стимулов создается ID такого отсутствия, пример такой записи: 2|||0|0| - ID=2<br>
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="updateNewsConditions.htm">updateNewsConditions</a> - Детектор нового выявляет новые условия</li>
-
-
