--- a/beast_scheme/funcs/BetterOrWorseNow.htm
+++ b/beast_scheme/funcs/BetterOrWorseNow.htm
@@ -12,14 +12,14 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция BetterOrWorseNow</h1>
 </div>
 
-<b>Стало лучше или хуже теперьэффект результата действия</b><br>
+<b>Стало лучше или хуже теперь эффект результата действия</b><br>
 <br>
 Вызывается из психики res:=gomeostas.BetterOrWorseNow()<br>
 Сканируется с каждым пульсом в func automatizmActionsPuls() во время ожидания
 CommonMoodAfterAction - "+" действия оператора привели к позитиву, "-" к негативу
 ВОЗВРАЩАЕТ:<br>
 commonDiffValue - насколько изменилось общее состояние, значение от -10(максимально Плохо) через 0 до 10(максимально Хорошо)<br>
-lastBetterOrWorse - стали лучше или хуже: величина измнения от -10 через 0 до 10<br>
+lastBetterOrWorse - стали лучше или хуже: величина изменения от -10 через 0 до 10<br>
 GomeoParIdSuccesArr - стали лучше следующие г.параметры []int гоменостаза<br>
 <br>
 Если было очень плохо, а стало не очень плохо, то commonDiffValue станет позитивным.<br>
@@ -28,5 +28,3 @@ GomeoParIdSuccesArr - стали лучше следующие г.парамет
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="wasChangingMoodCondition.htm">wasChangingMoodCondition</a> - Определения эффект реакции, негативный или позитивный</li>
-
-
