--- a/beast_scheme/funcs/CheckCurActionsContext.htm
+++ b/beast_scheme/funcs/CheckCurActionsContext.htm
@@ -22,7 +22,5 @@
 <b>Функция вызывается из:</b>
 <li><a href="automatizmTreeActivation.htm">automatizmTreeActivation</a> - активация дерева автоматизмов</li>
 <li><a href="automatizmTreeActivation.htm">GetAttentionDanger</a> - оценить опасность текущей ситуации: да-нет</li>
-<li><a href="GetCurrentInformationEnvironment.htm">GetCurrentInformationEnvironment</a> - олучение текущего состояния информационной среды</li>
+<li><a href="GetCurrentInformationEnvironment.htm">GetCurrentInformationEnvironment</a> - получение текущего состояния информационной среды</li>
 <li>GetCurrentConditionsStr - СТРОКА УСЛОВИЙ ДЛЯ безусловного РЕФЛЕКСА типа 1|2,5,8|11</li>
-
-
