--- a/beast_scheme/funcs/addNewtempArr.htm
+++ b/beast_scheme/funcs/addNewtempArr.htm
@@ -13,7 +13,7 @@
 </div>
 
 <b>Сенсор символов, слов и фраз</b><br>
-Добавляются как целиком фраза, так и все слова во фразе. Тут же дозаполняетс дерево слов уже многократно провторяющимися элементами.<br>
+Добавляются как целиком фраза, так и все слова во фразе. Тут же дозаполняется дерево слов уже многократно повторяющимися элементами.<br>
 <br>
 <br>
 
@@ -21,5 +21,3 @@
 <b>Функция вызывается из:</b>
 <li><a href="VerbalDetection.htm">VerbalDetection</a> - распознавание фразы с Пульта</li>
 <li><a href="SetNewTextBlock.htm">SetNewTextBlock</a> - Новая порция текста для формирования дерева слов. Эта функция работает при накачке текстов из main.go</li>
-
-
