--- a/beast_scheme/funcs/changingParVal.htm
+++ b/beast_scheme/funcs/changingParVal.htm
@@ -12,12 +12,10 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция changingParVal</h1>
 </div>
 
-<b>Шаг изменения парамктра со скоростью GomeostazParamsSpeed</b><br>
+<b>Шаг изменения параметра со скоростью GomeostazParamsSpeed</b><br>
 <br>
 
 
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="gomeostazUpdate.htm">gomeostazUpdate</a> - корректировка жизненных параметров по каждому пульсу</li>
-
-
