--- a/beast_scheme/funcs/createAndRunAutomatizmFromPurpose.htm
+++ b/beast_scheme/funcs/createAndRunAutomatizmFromPurpose.htm
@@ -12,7 +12,7 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция createAndRunAutomatizmFromPurpose</h1>
 </div>
 
-<b>Создание и запуск автоматизма на освное целей</b><br>
+<b>Создание и запуск автоматизма на основе целей</b><br>
 <br>
 ОПИСАНИЕ<br>
 <br>
@@ -23,4 +23,3 @@
 <li><a href="chooseAutomatizmSuccessAndRun.htm">chooseAutomatizmSuccessAndRun</a> - выбрать из ранее удачного автоматизма, перекрыть цель новой и запустить новый автоматизм</li>
 <li><a href="getPurposeGeneticAndRunAutomatizm.htm">getPurposeGeneticAndRunAutomatizm</a> - выбирается действие пробного автоматизма из выполнившегося рефлекса actualRelextActon</li>
 <li><a href="consciousness.htm">consciousness</a> - Главная, активная с каждым ориентировочным рефлексов функция циклов осмысления</li>
-
