--- a/beast_scheme/funcs/createMentalAutomatizmID.htm
+++ b/beast_scheme/funcs/createMentalAutomatizmID.htm
@@ -14,7 +14,7 @@
 
 <b>Создать новый ментальный автоматизм</b><br>
 <br>
-Ментальные втоматизмы уникальны по сочетанию ActionsImageID.
+Ментальные автоматизмы уникальны по сочетанию ActionsImageID.
 	   	При попытке создать с таким же сочетанием возвращается уже созданный.<br>
 <br>
 
@@ -24,7 +24,6 @@
 <li><a href="infoFunc1.htm">infoFunc1</a> - подобрать MentalActionsImages для продолжения цикла осмысления</li>
 <li><a href="infoFunc5.htm">infoFunc5</a> - создать и запустить ментальный автоматизм по действию mImgID</li>
 <li><a href="infoFunc7.htm">infoFunc7</a> - создать и запустить ментальный автоматизм запуска моторного автоматизма по действию ActionsImageID</li>
-<li>createAndRunPurposeAutomatizm - создать мент.автоматизм приоизвольной активацции ментальной цели</li>
+<li>createAndRunPurposeAutomatizm - создать мент. автоматизм произвольной активации ментальной цели</li>
 <li><a href="createNewNextFromUnderstandingNodeID.htm">createNewNextFromUnderstandingNodeID</a> - начать новое звено цепочки размышления</li>
 <li><a href="createNexusFromNextID.htm">createNexusFromNextID</a> - создание ментального автоматизма инфо-функции c ID= infoID</li>
-
