опечатки до loadActionsImageArr

--- a/beast_scheme/funcs/CreateNewTriggerStimulsImage.htm
+++ b/beast_scheme/funcs/CreateNewTriggerStimulsImage.htm
@@ -12,12 +12,10 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция CreateNewTriggerStimulsImage</h1>
 </div>
 
-<b>Оздать новое сочетание пусковых стимулов если такого еще нет</b><br>
+<b>Создать новое сочетание пусковых стимулов если такого еще нет</b><br>
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
-<li><a href="ActiveFromAction.htm">ActiveFromAction</a> - активировать дерево атовматизмов действием</li>
+<li><a href="ActiveFromAction.htm">ActiveFromAction</a> - активировать дерево атоматизмов действием</li>
 <li><a href="ActiveFromPhrase.htm">ActiveFromPhrase</a> - активировать дерево фразой</li>
-
-
