--- a/beast_scheme/funcs/GetCicklesToPult.htm
+++ b/beast_scheme/funcs/GetCicklesToPult.htm
@@ -12,11 +12,10 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция GetCicklesToPult</h1>
 </div>
 
-<b>Запрос с Пульта: Показать циелы размышления на Пульте</b><br>
+<b>Запрос с Пульта: Показать цели размышления на Пульте</b><br>
 
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="main.htm">main</a></li>
-
