--- a/beast_scheme/funcs/GetCurrentInformationEnvironment.htm
+++ b/beast_scheme/funcs/GetCurrentInformationEnvironment.htm
@@ -15,11 +15,11 @@
 <b>Получение текущего состояния информационной среды</b><br>
 <br>
 Отражение Базового состояния и Активных Базовых контекстов
-только при ориентировчном рефлексе и осмыслении результатов - обновление самоощущения.<br>
+только при ориентировочном рефлексе и осмыслении результатов - обновление самоощущения.<br>
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="orientation_1.htm">orientation_1</a> - Простейший ориентировочный рефлекс полного непонимания</li>
 <li><a href="orientation_2.htm">orientation_2</a> - Простейший ориентировочный рефлекс частичного непонимания</li>
-<li><a href="refreshCurrentInformationEnvironment.htm">refreshCurrentInformationEnvironment</a> - бновление состояния информационной среды</li>
+<li><a href="refreshCurrentInformationEnvironment.htm">refreshCurrentInformationEnvironment</a> - обновление состояния информационной среды</li>
