--- a/beast_scheme/funcs/GetPhraseStringsFromPhraseID.htm
+++ b/beast_scheme/funcs/GetPhraseStringsFromPhraseID.htm
@@ -25,9 +25,7 @@
 <li><a href="GetStrnameFromobjectID.htm">GetStrnameFromobjectID</a> - показать пусковой стимул, к которому привязан автоматизм</li>
 <li>GetImportanceObjectInfo - информация об объекте значимости</li>
 <li>GetStringsFromVerbalID - выдать инфу про VerbalID</li>
-<li><a href="findConditionsReflesFromImgID.htm">findConditionsReflesFromImgID</a> - айти другие образы,упрощая фразу</li>
+<li><a href="findConditionsReflesFromImgID.htm">findConditionsReflesFromImgID</a> - найти другие образы, упрощая фразу</li>
 <li><a href="GetConditionReflexInfo.htm">GetConditionReflexInfo</a> - выдать таблицу условных рефлексов</li>
 <li><a href="ExportFileUpdate.htm">ExportFileUpdate</a> - Экспорт в файл обмена</li>
 <li><a href="PhraseDetection.htm">PhraseDetection</a> - проход одной фразы - распознавание ID слов фразы</li>
-
-
