--- a/beast_scheme/funcs/GetRulesFromEpisodeMemory.htm
+++ b/beast_scheme/funcs/GetRulesFromEpisodeMemory.htm
@@ -14,11 +14,9 @@
 
 <b>Создать групповое правило (более одного в цепочке EpisodeMemory.TAid) из последнего участка эпизодической памяти</b><br>
 <br>
-limit ==5 ограничивает выборку из эпиз.памяти, но она может получться и меньше.<br>
+limit ==5 ограничивает выборку из эпиз. памяти, но она может получиться и меньше.<br>
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="fixNewRules.htm">fixNewRules</a> - при каждом ответе на действия оператора - прописывать текущее ПРАВИЛО rules</li>
-
-
