--- a/beast_scheme/funcs/GetSimpleActionForCurContitions.htm
+++ b/beast_scheme/funcs/GetSimpleActionForCurContitions.htm
@@ -12,12 +12,10 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция GetSimpleActionForCurContitions</h1>
 </div>
 
-<b>Выдать массив возможных действий по ID парамктров гомеостаза как цели для улучшения в данных условиях</b><br>
+<b>Выдать массив возможных действий по ID параметров гомеостаза как цели для улучшения в данных условиях</b><br>
 
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="findAnySympleRandActions.htm">findAnySympleRandActions</a> - пробовать всякие случайныее простые действия, не повторяясь</li>
-
-
