--- a/beast_scheme/funcs/IsBlockingMotorsAction.htm
+++ b/beast_scheme/funcs/IsBlockingMotorsAction.htm
@@ -12,12 +12,10 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция IsBlockingMotorsAction</h1>
 </div>
 
-<b>Блокировка рефлексорных действий из Психики или во сне</b><br>
+<b>Блокировка рефлекторных действий из Психики или во сне</b><br>
 
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li>todoAction - совершение действий и возможность их блокировки</li>
-
-
