--- a/beast_scheme/funcs/findReflexesNodes.htm
+++ b/beast_scheme/funcs/findReflexesNodes.htm
@@ -14,10 +14,10 @@
 
 <b>Распознать активную ветку дерева рефлексов.</b><br>
 <br>
-На каждом уровне допускаются ветвления его дочек - для нахождения не точного соотвествия, если не было найдено точное.<br>
+На каждом уровне допускаются ветвления его дочек - для нахождения не точного соответствия, если не было найдено точное.<br>
 Например, если рефлексы имеет только один Базовый контекст, а текущее состояние Beast - сочетание нескольких,
 то в результате должны сработать все рефлексы, для каждой цифры в сочетании образа текущих условий.
-Но если в рефлексе заданы несколько условий и такой образ точно совпадент с текущим образом условий,
+Но если в рефлексе заданы несколько условий и такой образ точно совпадает с текущим образом условий,
 то именно этот рефлекс и сработает.<br>
 <br>
 
