--- a/beast_scheme/funcs/fixNewRules.htm
+++ b/beast_scheme/funcs/fixNewRules.htm
@@ -12,14 +12,12 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция fixNewRules</h1>
 </div>
 
-<b>При каждом ответе на действия операторапрописывать текущее ПРАВИЛО rules</b><br>
+<b>При каждом ответе на действия оператора прописывать текущее ПРАВИЛО rules</b><br>
 <br>
-А так же просматривать эпизод память взад макcимум на 6 шагов или до паузы в общении > EpisodeMemoryPause шагов,
+А так же просматривать эпизод память назад макcимум на 6 шагов или до паузы в общении > EpisodeMemoryPause шагов,
 		фиксируя цепочку правил.<br>
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="calcAutomatizmResult.htm">calcAutomatizmResult</a> - оценивать действие запущенного автоматизма</li>
-
-
