--- a/beast_scheme/funcs/fixNewTeachRules.htm
+++ b/beast_scheme/funcs/fixNewTeachRules.htm
@@ -12,18 +12,16 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция fixNewTeachRules</h1>
 </div>
 
-<b>Отзеркаливает авторитерный ответ Оператора на совершенное действие</b><br>
+<b>Отзеркаливает авторитетный ответ Оператора на совершенное действие</b><br>
 <br>
-Записать одиночное Правило как Оператор отвечает на действиЯ Beast -
+Записать одиночное Правило как Оператор отвечает на действия Beast -
 	авторитетное Правило всегда имеет эффект +1
-Такое Правило используется в случае отсуствия решения как отвечать,
-т.к. не пришется групповое Правило дял точного бездумного реагирования
-(хотя на уровне эпиз.памяти и можно вычленять такие групповые Правила,
+Такое Правило используется в случае отсутствия решения как отвечать,
+т.к. не пишется групповое Правило дял точного бездумного реагирования
+(хотя на уровне эпиз. памяти и можно вычленять такие групповые Правила,
 выделяя Стимул следующего Правила как ответ на действия Beast).<br>
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="calcAutomatizmResult.htm">calcAutomatizmResult</a> - оценивать действие запущенного автоматизма</li>
-
-
