--- a/beast_scheme/funcs/getAlternative.htm
+++ b/beast_scheme/funcs/getAlternative.htm
@@ -12,7 +12,7 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция getAlternative</h1>
 </div>
 
-<b>Попробовать найти подходящее слово с альтрнативным ID. </b><br>
+<b>Попробовать найти подходящее слово с альтернативным ID. </b><br>
 <br>
 Первые буквы должны совпадать, а остальные, кроме последней (разные окончания),
 быть перемешаны, но в наличии >80%<br>
@@ -21,5 +21,3 @@
 <br>
 <b>Функция вызывается из:</b>
 <li>tryWordRecognize - распознаватель слова</li>
-
-
