--- a/beast_scheme/funcs/getAutomatizmFromNodeID.htm
+++ b/beast_scheme/funcs/getAutomatizmFromNodeID.htm
@@ -12,15 +12,13 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция getAutomatizmFromNodeID</h1>
 </div>
 
-<b>Не раздумывая, а рефлексторно используя имеющуюся информацию, ВЫБРАТЬ ЛУЧШИЙ АВТОМАТИЗМ для узла дерева автоматизмов</b><br>
+<b>Не раздумывая, а рефлекторно используя имеющуюся информацию, ВЫБРАТЬ ЛУЧШИЙ АВТОМАТИЗМ для узла дерева автоматизмов</b><br>
 <br>
 ВЫБРАТЬ ЛУЧШИЙ АВТОМАТИЗМ для узла nodeID то более ранних, если нет у поздних.
-а если нет, то учитывать общие автомтизмы, привязанные к действиям (виртуальная ветка ID от 1000000) и словам (>2000000)<br>
+а если нет, то учитывать общие автоматизмы, привязанные к действиям (виртуальная ветка ID от 1000000) и словам (>2000000)<br>
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="afterTreeActivation.htm">afterTreeActivation</a> - реакция после активации ветки дерева</li>
 <li><a href="consciousness.htm">consciousness</a> - Главная, активная с каждым ориентировочным рефлексов функция циклов осмысления</li>
-
-
