--- a/beast_scheme/funcs/getCurSituationImageID.htm
+++ b/beast_scheme/funcs/getCurSituationImageID.htm
@@ -27,7 +27,7 @@
 	1 - было ответное действие (смотреть в автоматизме ветки Usefulness int - (БЕС)ПОЛЕЗНОСТЬ: вред: -10 0 +10 +n польза diffPsyBaseMood )<br>
 	2 - был запуск автоматизма ветки.<br>
 	3 - ничего не делали, но нужно осмысление<br>
-	4 - все спокойно, можно экспериментивароть<br>
+	4 - все спокойно, можно экспериментировать<br>
 	5 - оператор не прореагировал на действия в течение периода ожидания - игнорирует? нужно достучаться?<br>
 <br>
 	10-17 - оператор выбрал настроение (14 - Учитель при отправке)<br>
@@ -38,5 +38,3 @@
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="understandingSituation.htm">understandingSituation</a> - Активация дерева понимания ситуации</li>
-
-
