--- a/beast_scheme/funcs/getGreatestImportance.htm
+++ b/beast_scheme/funcs/getGreatestImportance.htm
@@ -12,14 +12,12 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция getGreatestImportance</h1>
 </div>
 
-<b>Найти наиболее значащие обхекты в данных условиях</b><br>
+<b>Найти наиболее значащие объекты в данных условиях</b><br>
 
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
-<li>todoComparison - сопоставление, грозит ли опасностной значимостью запускаемый автоматизм</li>
+<li>todoComparison - сопоставление, грозит ли опасной значимостью запускаемый автоматизм</li>
 <li>getMentalPurpose - найти подходящий PurposeImage.actionID и определить mentalInfoStruct.mentalPurposeID</li>
 <li><a href="consciousness.htm">consciousness</a> - Главная, активная с каждым ориентировочным рефлексов функция циклов осмысления</li>
-
-
