--- a/beast_scheme/funcs/getImportantSigns.htm
+++ b/beast_scheme/funcs/getImportantSigns.htm
@@ -14,12 +14,10 @@
 
 <b>Найти важные (по опыту) признаки в новизне.</b><br>
 <br>
-Это - чисто рефлексторный процесс поиска в опыте<br>
+Это - чисто рефлекторный процесс поиска в опыте<br>
 
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="getPurposeGenetic2AndRunAutomatizm.htm">getPurposeGenetic2AndRunAutomatizm</a></li>
-
-
