--- a/beast_scheme/funcs/getLastRulesSequenceFromEpisodeMemory.htm
+++ b/beast_scheme/funcs/getLastRulesSequenceFromEpisodeMemory.htm
@@ -12,13 +12,11 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция getLastRulesSequenceFromEpisodeMemory</h1>
 </div>
 
-<b>Вытащить из эпизод.памяти посленюю цепочку кадров</b><br>
+<b>Вытащить из эпизод. памяти последнюю цепочку кадров</b><br>
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="GetRulesFromEpisodeMemory.htm">GetRulesFromEpisodeMemory</a> - Создать групповое правило (более одного в цепочке EpisodeMemory.TAid) из последнего участка эпизодической памяти</li>
 <li><a href="getRulesArrFromTrigger.htm">getRulesArrFromTrigger</a> - наиболее совпадающее ПОЛЕЗНОЕ (Effect>0) Правило</li>
-<li><a href="getRulesFromEpisodicsSlice.htm">getRulesFromEpisodicsSlice</a> - ищем правила в эпиз.памяти, ориентируясь на Count как число совпадений такой пары при преобразовании</li>
-
-
+<li><a href="getRulesFromEpisodicsSlice.htm">getRulesFromEpisodicsSlice</a> - ищем правила в эпиз. памяти, ориентируясь на Count как число совпадений такой пары при преобразовании</li>
