--- a/beast_scheme/funcs/getMentalRulesArrFromTrigger.htm
+++ b/beast_scheme/funcs/getMentalRulesArrFromTrigger.htm
@@ -16,11 +16,9 @@
 <br>
 Возвращает:<br>
 1 - ID Правила<br>
-2 - неуверенность нахождения: 0 - макисмальная уваеренность, чем ниже, тем неопределеннее<br>
+2 - неуверенность нахождения: 0 - максимальная уверенность, чем ниже, тем неопределеннее<br>
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
-<li><a href="getSuitableMentalRules.htm">getSuitableMentalRules</a> - выбрать наилучшее Правило rulesID по действию с Пульта или измененнию состояния</li>
-
-
+<li><a href="getSuitableMentalRules.htm">getSuitableMentalRules</a> - выбрать наилучшее Правило rulesID по действию с Пульта или изменению состояния</li>
