--- a/beast_scheme/funcs/getMentalRulesFromEpisodicsSlice.htm
+++ b/beast_scheme/funcs/getMentalRulesFromEpisodicsSlice.htm
@@ -12,29 +12,26 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция getMentalRulesFromEpisodicsSlice</h1>
 </div>
 
-<b>Найти последнее известное Правило по цепочке последних limit кадров эпиз.памяти с учетом шаблона уже реализованных правил.</b><br>
+<b>Найти последнее известное Правило по цепочке последних limit кадров эпиз. памяти с учетом шаблона уже реализованных правил.</b><br>
 <br>
 Последовательность шаблона использует прежний опыт цепочек Стимул-Ответ-Эффект
-с ожиданием очередного Стимула для последуего нахождения подходящего Ответа.<br>
+с ожиданием очередного Стимула для последующего нахождения подходящего Ответа.<br>
 
 Каждый раз, находя последнее правило в данной ситуации,
 оно может использоваться для того, чтобы перейти к следующему известному правилу
-или, если такого нет, начать фрмировать новое решение
+или, если такого нет, начать формировать новое решение
 ментальным автоматизмом получения инфы с запуском ментального осмысления.<br>
 
-Получается ветвление дерева решений (основанного на эпиз.памяти) по каждому Стимулу.<br>
+Получается ветвление дерева решений (основанного на эпиз. памяти) по каждому Стимулу.<br>
 
-Такой поиск одинаково работате как для кадров объективной эпизод.памяти,
+Такой поиск одинаково работает как для кадров объективной эпизод. памяти,
 давая решение для запуска моторных автоматизмов,
-так и для кадров субъектиных - давая решения запуска метнальным автоматизмам.<br>
+так и для кадров субъективных - давая решения запуска менальным автоматизмам.<br>
 
 Чем больше limit тем маловероятнее найти совпадения,
 так что можно вызывать getRulesFromEpisodicsSlice постепенно уменьшая limit.<br>
 
 Возвращает:<br>
 1 - ID Правила<br>
-2 - index эпиз.памяти с таким Правилом<br>
+2 - index эпиз. памяти с таким Правилом<br>
 <br>
-
-
-
