--- a/beast_scheme/funcs/getNormaDiapason.htm
+++ b/beast_scheme/funcs/getNormaDiapason.htm
@@ -12,7 +12,7 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция getNormaDiapason</h1>
 </div>
 
-<b>В каком из 5 диапазоне нормы находится Базовый параметр</b><br>
+<b>В каком из 5 диапазонов нормы находится Базовый параметр</b><br>
 <br>
 0 - это не норма<br>
 1 Норма 0-19%<br>
@@ -25,5 +25,3 @@
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="baseContextUpdate.htm">baseContextUpdate</a> - обновить состояние базового контекста</li>
-
-
