--- a/beast_scheme/funcs/getPurposeGenetic.htm
+++ b/beast_scheme/funcs/getPurposeGenetic.htm
@@ -12,13 +12,13 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция getPurposeGenetic</h1>
 </div>
 
-<b>Определение Цели в данной ситуациина уровне наследственных функций</b><br>
+<b>Определение Цели в данной ситуации на уровне наследственных функций</b><br>
 <br>
 Сначала посмотреть подходит ли по условиям текущий безусловный или условный рефлекс и сделать автоматизм по его действиям
 	чтобы проверить его в текущих условиях т.к. getPurposeGenetic() срабатывает по ориентировочному рефлексу.<br>
 		При этом уже не будет формироваться условный рефлекс при осознанном внимании
 	(т.к. заблокируется выработанным пробным действием)<br>
-Если вообще нет лействий, то остается только случайное действие или бездействие
+Если вообще нет действий, то остается только случайное действие или бездействие
 Так что лучше не заморачиваться с этим!
 <br>
 
@@ -29,5 +29,3 @@
 <li><a href="getPurposeGeneticAndRunAutomatizm.htm">getPurposeGeneticAndRunAutomatizm</a> - Определение Цели в данной ситуации - на уровне наследственных функций</li>
 <li><a href="consciousness.htm">consciousness</a> - Главная, активная с каждым ориентировочным рефлексов функция циклов осмысления</li>
 <li><a href="understandingSituation.htm">understandingSituation</a> - Активация дерева понимания ситуации</li>
-
-
