--- a/beast_scheme/funcs/getPurposeGenetic2AndRunAutomatizm.htm
+++ b/beast_scheme/funcs/getPurposeGenetic2AndRunAutomatizm.htm
@@ -14,7 +14,7 @@
 
 <b>Обработка автоматизма, рвущегося на выполнение, но в условиях может быть новизна</b><br>
 <br>
-Здесь - очень органиченные возможности адаптации автоматизма:<br>
+Здесь - очень ограниченные возможности адаптации автоматизма:<br>
 плохой - не выполнять, хороший - выполнять
 при опасной ситуации выполнять тот, какой есть,
 при спокойной ситуации - пробовать рефлексы мозжечка.<br>
@@ -26,5 +26,3 @@
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="orientation_2.htm">orientation_2</a> - Простейший ориентировочный рефлекс частичного непонимания</li>
-
-
