--- a/beast_scheme/funcs/getRulesArrFromAttentionObject.htm
+++ b/beast_scheme/funcs/getRulesArrFromAttentionObject.htm
@@ -17,11 +17,9 @@
 КОНКРЕТНО ДЛЯ определенного объекта внимания extremImportanceObject (objID int, kind int) в структуре ActionsImage,
 используя шаблоном последнюю цепочку кадров эпизод. памяти.<br>
 Возвращает - ID одиночного Правила<br>
-Чем более частный вид объекта внимания extremImportanceObject, тем более недостовеный резаультат.<br>
+Чем более частный вид объекта внимания extremImportanceObject, тем более недостоверный результат.<br>
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li>infoFindAttentionObjImprovement - улучшение значимости объекта внимания</li>
-
-
