--- a/beast_scheme/funcs/infoFindRundomMentalFunction.htm
+++ b/beast_scheme/funcs/infoFindRundomMentalFunction.htm
@@ -14,12 +14,10 @@
 
 <b>Случайный выбор ментальной функции, из тех, что еще не использовались в данном цикле</b><br>
 <br>
-Но непонятно, как отслеживать Эффект если нет памяти о том, какой именно случайный парамет был применен.<br>
+Но непонятно, как отслеживать Эффект если нет памяти о том, какой именно случайный параметр был применен.<br>
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="infoFunc1.htm">infoFunc1</a> - Подобрать MentalActionsImages для продолжения цикла осмысления</li>
 <li><a href="infoFunc2.htm">infoFunc2</a> - выбор той или иной функции делается в контексте имеющейся инфо-среды</li>
-
-
