--- a/beast_scheme/funcs/infoFunc14.htm
+++ b/beast_scheme/funcs/infoFunc14.htm
@@ -12,7 +12,7 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция infoFunc14</h1>
 </div>
 
-<b>Ментально переактиваровать дерево понимания</b><br>
+<b>Ментально переактивировать дерево понимания</b><br>
 <br>
 Ее главное тело: func reactivateEmotionUnderstandingЕree()bool {<br>
 <br>
@@ -20,5 +20,3 @@
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="runMentalFunctionID.htm">runMentalFunctionID</a> - Функция вызова пронумерованной функции</li>
-
-
