--- a/beast_scheme/funcs/infoFunc4.htm
+++ b/beast_scheme/funcs/infoFunc4.htm
@@ -12,7 +12,7 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция infoFunc4</h1>
 </div>
 
-<b>Анализ инфо стркутуры и др. информации по currentInfoStructId и выдача решения</b><br>
+<b>Анализ инфо структуры и др. информации по currentInfoStructId и выдача решения</b><br>
 <br>
 Ее главное тело: func analisAndSintez()bool {<br>
 <br>
@@ -20,4 +20,3 @@
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="runMentalFunctionID.htm">runMentalFunctionID</a> - Функция вызова пронумерованной функции</li>
-
