--- a/beast_scheme/funcs/isIdleness.htm
+++ b/beast_scheme/funcs/isIdleness.htm
@@ -18,7 +18,5 @@
 
 <br>
 <b>Функция вызывается из:</b>
-<li><a href="consciousness.htm">consciousness</a> - Главная, активная с каждым ориентировочным рефлексов функция циклов осмысления</li>
+<li><a href="consciousness.htm">consciousness</a> - Главная, активная с каждым ориентировочным рефлексом функция циклов осмысления</li>
 <li><a href="infoFunc2.htm">infoFunc2</a> - выбор той или иной функции делается в контексте имеющейся инфо-среды</li>
-
-
