--- a/beast_scheme/funcs/GetCurMood.htm
+++ b/beast_scheme/funcs/GetCurMood.htm
@@ -15,7 +15,7 @@
 <b>Текущее ощущение своего состояния</b><br>
 <br>
 Обновляется при инициализации GetCurrentInformationEnvironment() до и после совершения действий</b><br>
-Это безусловно-рефлекторная оценка на освнове изменений 
+Это безусловно-рефлекторная оценка на основе изменений 
 гомео параметров (улавливает их изменение >4%) и 2) основы базовых контекстов: 0- НОРМА, 1-ПЛОХО, 2-ХОРОШО<br>
 Хотя базовые контексты уже создаются на основе жизненных параметров,
 но это - безусловный рефлекс на основе безусловного рефлекса активации базовых контекстов.<br>
@@ -26,4 +26,3 @@
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="GetCurrentInformationEnvironment.htm">GetCurrentInformationEnvironment</a> - получение текущего состояния информационной среды</li>
-
