--- a/beast_scheme/funcs/findAnySympleRandActions.htm
+++ b/beast_scheme/funcs/findAnySympleRandActions.htm
@@ -12,7 +12,7 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция findAnySympleRandActions</h1>
 </div>
 
-<b>Пробовать всякие случайныее простые действия, не повторяясь. На стадии 3 тварь получает реакцию оператора, которую отзеркаливает</b><br>
+<b>Пробовать всякие случайные простые действия, не повторяясь. На стадии 3 тварь получает реакцию оператора, которую отзеркаливает</b><br>
 
 <br>
 
@@ -20,5 +20,3 @@
 <b>Функция вызывается из:</b>
 <li><a href="getPurposeGeneticAndRunAutomatizm.htm">getPurposeGeneticAndRunAutomatizm</a> - выбирается действие пробного автоматизма из выполнившегося рефлекса actualRelextActon.</li>
 <li><a href="getPurposeGenetic2AndRunAutomatizm.htm">getPurposeGenetic2AndRunAutomatizm</a> - обработка автоматизма, рвущегося на выполнение, но в условиях может быть новизна</li>
-
-
