--- a/beast_scheme/funcs/getConditionsArr.htm
+++ b/beast_scheme/funcs/getConditionsArr.htm
@@ -15,8 +15,5 @@
 <b>Создание иерархии образов контекстов условий и пусковых стимулов в виде ID образов</b><br>
 <br>
 Создать последовательность уровней условий в виде массива  ID последовательности ID уровней
-В случае отсуствия пусковых стимулов создается ID такого отсутсвия, пример такой записи: 2|||0|0|<br>
+В случае отсутствия пусковых стимулов создается ID такого отсутствия, пример такой записи: 2|||0|0|<br>
 <br>
-
-
-
