--- a/beast_scheme/funcs/getRulesFromEpisodicsSlice.htm
+++ b/beast_scheme/funcs/getRulesFromEpisodicsSlice.htm
@@ -12,7 +12,7 @@
 <h1 style='position:absolute;top:-10px;left:50%;transform: translate(-50%, 0);font-size:18px;white-space: nowrap;'>Функция getRulesFromEpisodicsSlice</h1>
 </div>
 
-<b>Найти последнее известное Правило по цепочке последних limit кадров эпиз.памяти</b><br>
+<b>Найти последнее известное Правило по цепочке последних limit кадров эпиз. памяти</b><br>
 <br>
 Смотреть собственную память имеет смысл только в виде цепочки эпизодов - для прогнозирования предположительных
 последствий запуска такой цепочки. Отдельные эпизоды просто показывают срабатывания автоматизмов.<br>
@@ -24,18 +24,16 @@
 Стимул10(Ответ1) - Ответ10(Стимул2) - Count1 | Стимул11(Ответ2) - Ответ11(Стимул2) - Count2<br>
 здесь эффекта нет потому, что мы не знаем, как отразилось на операторе его действие, а уверенно гадать на 4 стадии еще не умеем.<br>
 Поэтому просто ищем среди этих пар подходящий стимул, ориентируясь на Count как число совпадений такой пары при преобразовании.<br>
-	То есть сколько раз была зафкисирована в памяти такая реакци оператора - это будет фактором уверенности ее отзеркаливания, если
+	То есть сколько раз была зафиксирована в памяти такая реакции оператора - это будет фактором уверенности ее отзеркаливания, если
 придется выбирать из нескольких вариантов. Поиск будет быстрее, если отсортировать по Count по убыванию.<br>
 	Отзеркаленный автоматизм тем не менее не может быть авторитарным несмотря ни на какую Count, только пробным.<br>
 	Такое отзеркаливание, с оценкой прошлого опыта, можно назвать более осмысленным, по сравнению с попугайским рефлекторным на 3 стадии.
 <br>
 Возвращает:<br>
 1 - ID Правила<br>
-2 - index эпиз.памяти с таким Правилом<br>
+2 - index эпиз. памяти с таким Правилом<br>
 <br>
 
 <br>
 <b>Функция вызывается из:</b>
 <li><a href="infoFunc8.htm">infoFunc8</a> - ентальное определение ближайшей Цели в данной ситуации</li>
-
-
